@@ -58,6 +58,7 @@ Patches
  - Philipp Spitzer
  - Dave Stubbs
  - River Tarnell
+ - Oliver Tonnhofer
  - Lennard voor den Dag
  - Shaun Walbridge
  - Leslie Wu
